--- a/.gitignore
+++ b/.gitignore
@@ -12,7 +12,7 @@ dist
 dist-ssr
 *.local
 
-.env
+#.env
 
 # Editor directories and files
 .vscode/*
@@ -25,7 +25,7 @@ dist-ssr
 *.sln
 *.sw?
 
-.env
-.env.local
-.env.development
-.env.production
+# .env
+# .env.local
+# .env.development
+# .env.production
