--- a/app.json
+++ b/app.json
@@ -1,26 +1,14 @@
 {
 	"version": "1.0",
 	"label": "app_name",
-	"engine": {
-		"architecture": "starlark",
-		"version": 2
-	},
-	"files": [
-		"home.star"
-	],
-	"paths": {
-		"home": {
-			"actions": {
-				"": {
-					"file": "web/dist/index.html"
-				},
-				"assets": {
-					"files": "web/dist/assets"
-				},
-				"images": {
-					"files": "web/dist/images"
-				}
-			}
-		}
+	"paths": ["home"],
+
+	"architecture": {"engine": "starlark", "version": 2},
+	"execute": ["home.star"],
+
+	"actions": {
+		"": {"file": "web/dist/index.html"},
+		"assets": {"files": "web/dist/assets"},
+		"images": {"files": "web/dist/images"}
 	}
 }
