Move Home to root path, update endpoints
- Change paths from ["home"] to [""] to serve at /
- Update endpoints to use /_/* prefix
- Update VITE_APP_HOME_URL to /

--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
 	"version": "1.0",
 	"label": "app_name",
-	"paths": ["home"],
+	"paths": [""],
 
 	"architecture": {"engine": "starlark", "version": 2},
 	"execute": ["home.star"],
