--- a/web/.env
+++ b/web/.env
@@ -1,4 +1,5 @@
+# Auth
+VITE_AUTH_LOGIN_URL=/login
 # App URLs
-VITE_AUTH_LOGIN_URL=/login/
 VITE_APP_CHAT_URL=/chat/
 VITE_APP_FRIENDS_URL=/friends/
