Self-host Nunito font and remove unused Google Fonts
Replace Google Fonts imports with self-hosted Nunito 300 (16KB) for the
mochi branding text. Remove unused Inter and Manrope fonts that were
loaded but never applied.

--- a/app.json
+++ b/app.json
@@ -12,6 +12,7 @@
 	"actions": {
 		"": {"file": "web/dist/index.html"},
 		"assets": {"files": "web/dist/assets"},
+		"fonts": {"files": "web/dist/fonts"},
 		"icons": {"function": "action_icons"},
 		"images": {"files": "web/dist/images"}
 	}
