--- a/app.json
+++ b/app.json
@@ -13,7 +13,7 @@
 		"": {"file": "web/dist/index.html"},
 		"assets": {"files": "web/dist/assets"},
 		"fonts": {"files": "web/dist/fonts"},
-		"icons": {"function": "action_icons"},
+		"-/icons": {"function": "action_icons"},
 		"images": {"files": "web/dist/images"}
 	}
 }
